--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <link rel="stylesheet" href="lotus-rain.css">
 </head>
 <body>
-  <div class="lotus-rain-bg"></div>
+  <!-- You can configure the lotus rain here! -->
+  <div 
+    class="lotus-rain-bg"
+    data-count="40"         <!-- Number of flowers -->
+    data-speed="1.5"        <!-- Speed multiplier (default 1.0) -->
+    data-opacity="0.9"      <!-- Max opacity (0-1, default 1) -->
+  ></div>
   <div class="content">
     <h1>Welcome to Lotus!</h1>
     <p>A beautiful mobile website with a pink vibe and a lotus rain touch.</p>
