--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <!-- You can configure the lotus rain here! -->
   <div 
     class="lotus-rain-bg"
-    data-count="40"         <!-- Number of flowers -->
-    data-speed="1.5"        <!-- Speed multiplier (default 1.0) -->
-    data-opacity="0.9"      <!-- Max opacity (0-1, default 1) -->
+    data-count="40"         
+    data-speed="1.5"        
+    data-opacity="0.9"      
   ></div>
   <div class="content">
     <h1>Welcome to Lotus!</h1>
