--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lotus Rain Mobile Site</title>
-  <link rel="stylesheet" href="lotus-rain.css">
+  <link rel="stylesheet" href="css/lotus-rain.css">
+  <link rel="stylesheet" href="music2.css">
 </head>
 <body>
   <!-- You can configure the lotus rain here! -->
@@ -17,6 +18,7 @@
     <h1>Welcome to Lotus!</h1>
     <p>A beautiful mobile website with a pink vibe and a lotus rain touch.</p>
   </div>
-  <script src="lotus-rain.js"></script>
+  <script src="js/lotus-rain.js"></script>
+  <script src="js/music2.js"></script>
 </body>
 </html>
