--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lotus Main Content</title>
-  <link rel="stylesheet" href="css/lotus-rain.css">
-  <link rel="stylesheet" href="css/main-style.css">
+  <link rel="stylesheet" href="lotus-rain.css">
+  <link rel="stylesheet" href="main-style.css">
 </head>
 <body>
-  <!-- Lotus rain background, adjustable with data attributes -->
   <div 
     class="lotus-rain-bg"
     data-count="40"
@@ -15,13 +14,13 @@
     data-opacity="0.2"
   ></div>
 
-  <!-- Bonnet/banner at the top -->
+  <!-- Bonnet/banner at the top (square with opacity and spacing) -->
   <div class="bonnet">
     <!-- Change this text to your desired bold banner! -->
     Welcome to Lotus!
   </div>
 
-  <!-- Centered main rectangle for content -->
+  <!-- Centered main rectangle for content (opacity adjustable in CSS) -->
   <div class="center-rectangle">
     <p>
       This is your main content area.<br>
@@ -29,6 +28,6 @@
     </p>
   </div>
   
-  <script src="js/lotus-rain.js"></script>
+  <script src="lotus-rain.js"></script>
 </body>
 </html>
