--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lotus Main Content</title>
-  <link rel="stylesheet" href="lotus-rain.css">
-  <link rel="stylesheet" href="main-style.css">
+  <link rel="stylesheet" href="css/lotus-rain.css">
+  <link rel="stylesheet" href="css/main-style.css">
 </head>
 <body>
   <div 
@@ -28,6 +28,6 @@
     </p>
   </div>
   
-  <script src="lotus-rain.js"></script>
+  <script src="js/lotus-rain.js"></script>
 </body>
 </html>
