--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lotus Main Content</title>
+  <title>Scrisorica hihihi</title>
   <link rel="stylesheet" href="css/lotus-rain.css">
   <link rel="stylesheet" href="css/main-style.css">
 </head>
@@ -17,14 +17,14 @@
   <!-- Bonnet/banner at the top (square with opacity and spacing) -->
   <div class="bonnet">
     <!-- Change this text to your desired bold banner! -->
-    Welcome to Lotus!
+    Bine ai venit la scrisoarea mea!❤️
   </div>
 
   <!-- Centered main rectangle for content (opacity adjustable in CSS) -->
   <div class="center-rectangle">
     <p>
-      This is your main content area.<br>
-      Put anything you want here!
+      Din cauza faptului ca eu scriu urat am decis sa iti fac o scrisoare de asta:D<br>
+      Vreau sa stii cat de mult te iubesc si nu voi scrie nimic cu ai totul vine de la mine!
     </p>
   </div>
   
