--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/main-style.css">
 </head>
 <body>
+  <!-- Lotus rain background (flowers will fall behind everything) -->
   <div 
     class="lotus-rain-bg"
     data-count="50"
@@ -14,13 +15,12 @@
     data-opacity="0.4"
   ></div>
 
-  <!-- Bonnet/banner at the top (square with opacity and spacing) -->
+  <!-- Bonnet/banner at the top -->
   <div class="bonnet">
-    <!-- Change this text to your desired bold banner! -->
     Bine ai venit la scrisoarea mea!❤️
   </div>
 
-  <!-- Centered main rectangle for content (opacity adjustable in CSS) -->
+  <!-- Centered main rectangle for content -->
   <div class="center-rectangle">
     <p>
       Din cauza faptului ca eu scriu urat am decis sa iti fac o scrisoare de asta:D<br>
