--- a/lotus_second.html
+++ b/lotus_second.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mesaj pentru tine 💖</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="l.css" />
+  <link rel="stylesheet" href="css/l.css" />
 </head>
 <body>
   <div class="falling-container" id="falling-container"></div>
@@ -45,6 +45,6 @@
     <center><a class="continue-link" href="Lotus_love.html">Ai citit tot?</a></center>
   </div>
 
-  <script src="l.js"></script>
+  <script src="js/l.js"></script>
 </body>
 </html>
