--- a/backup.html
+++ b/backup.html
@@ -5,6 +5,7 @@
   <title>Scrisorica hihihi</title>
   <link rel="stylesheet" href="css/lotus-rain.css">
   <link rel="stylesheet" href="css/main-style.css">
+  <link rel="stylesheet" href="css/music-player.css"> <!-- Add this line -->
 </head>
 <body>
   <!-- Lotus rain background (flowers will fall behind everything) -->
@@ -27,7 +28,10 @@
       Vreau sa stii cat de mult te iubesc si nu voi scrie nimic cu ai totul vine de la mine!
     </p>
   </div>
-  
+
+  <!-- Lotus background effect -->
   <script src="js/lotus-rain.js"></script>
+  <!-- Floating music player -->
+  <script src="js/music-player.js"></script>
 </body>
 </html>
