--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <strong>Cu drag,</strong><br>
       <strong>Partenerul tău!</strong>
     </p>
-    <center><a class="continue-link" href="Lotus_love.html">Ai citit tot?</a></center>
+    <center><a class="continue-link" href="2nd_step.html">Ai citit tot?</a></center>
   </div>
 
   <script>
