--- a/l.html
+++ b/l.html
@@ -4,33 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Joc de Cuvinte - Iubire</title>
-  <link rel="stylesheet" href="css/main-style.css">
-  <style>
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-      max-width: 300px;
-      margin: 40px auto;
-      gap: 4px;
-    }
-    .grid input {
-      width: 100%;
-      aspect-ratio: 1;
-      text-align: center;
-      font-size: 1.5rem;
-      text-transform: uppercase;
-      border: 2px solid #DB87D4;
-      border-radius: 6px;
-    }
-    h1 {
-      text-align: center;
-      color: #d4006f;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
   <h1>Completează cuvintele</h1>
+  <div class="questions">
+    <!-- Aici vei adăuga cele 6 întrebări -->
+    <!-- Exemplu: <p>1. O floare frumoasă: _______</p> -->
+  </div>
   <div class="grid" id="word-grid"></div>
 
   <script src="js/word-checker.js"></script>
