--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('lotus.jpg') no-repeat center center fixed;
+      background: url('img/lotus.jpg') no-repeat center center fixed;
       background-size: cover;
       font-family: 'Open Sans', sans-serif;
       color: #fff;
@@ -161,7 +161,7 @@
       <strong>Cu drag,</strong><br>
       <strong>Partenerul tău!</strong>
     </p>
-    <center><a class="continue-link" href="2nd_step.html">Ai citit tot?</a></center>
+    <center><a class="continue-link" href="scrabble.html">Ai citit tot?</a></center>
   </div>
 
   <script>
