--- a/scrabble.html
+++ b/scrabble.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Answer the questions below</h1>
-  <p class="rotate-hint">🔄 Rotate your device for best experience</p>
+  <p class="rotate-hint">🔄 Rotate your device for best experience. EXCEPT LAPTOPS/PCs</p>
 
   <div class="questions" id="questions"></div>
 
