--- a/index.html
+++ b/index.html
@@ -152,12 +152,60 @@
 
   <div class="content">
     <p class="message-box">
-      <strong>Dragă Îngeraș,</strong><br><br>
-      Încep acest mesaj cu un <em>te iubesc</em> sincer. Sper din suflet că îți va plăcea ceea ce am pregătit pentru tine în partea ce urmează.<br><br>
-      Am evoluat foarte mult datorită ție și aș vrea să îți mulțumesc pentru tot ceea ce faci pentru mine, pentru toată răbdarea și iertarea pe care mi le-ai oferit. Mă bucur că îți sunt alături și că îmi ești alături.<br><br>
-      Ești o persoană, dar și un partener, unic și perfect.<br>
-      Lucrez la acest site web de ceva vreme și simt că este aproape gata. Sper să îți placă – am pus suflet în fiecare detaliu și îți dedic ție tot ce e mai frumos, draga mea. Te admir și te iubesc enorm.<br><br>
-      Voi continua să adaug lucruri, dar pentru moment cred că este într-un punct destul de <em>ok-ish</em> 😊 și aș aprecia mult dacă ai completa ce urmează. ❤️<br><br>
+      <strong>Dacă tu ai dispărea</strong> de Adrian Păunescu<br><br>
+      Dacă tu ai dispărea<br>
+Într-o noapte oarecare,<br>
+Dulcea mea, amara mea,<br>
+Aş pleca nebun pe mare.<br>
+
+<br><br>
+
+Cu un sac întreg de lut<br>
+Şi-o spinare de nuiele,<br>
+Să te fac de la-nceput<br>
+Cu puterea mîinii mele.<br>
+
+<br><br>
+
+Lucru lung şi monoton<br>
+Să te înviez, femeie,<br>
+Eu, bolnav Pygmalion,<br>
+Hai şi umblă, Galatee!<br>
+
+<br><br>
+
+Dacă tu ai dispărea,<br>
+Fi-ţi-ar moartea numai viaţă<br>
+Dulcea mea, amara mea,<br>
+Aş pleca în ţări de gheaţă.<br>
+
+<br><br>
+
+Să te fac din ţurţuri reci,<br>
+Să te-mbrac în promoroacă<br>
+Şi apoi să poţi să pleci<br>
+Orişiunde o să-ţi placă…<br>
+
+<br><br>
+
+De-ai cădea, într-adevăr,<br>
+În momentul marii frîngeri,<br>
+Aş veni la tine-n cer<br>
+Să te recompun din îngeri.<br>
+
+<br><br>
+
+Şi pe urmă aş pleca,<br>
+Umilit şi iluzoriu,<br>
+Unde este casa mea,<br>
+O mansardă-n purgatoriu.<br>
+
+<br><br>
+
+Dacă tu ai dispărea<br>
+Şi din rîsu-mi şi din plînsu-mi,<br>
+Te-aş găsi în sinea mea,<br>
+Te-aş zidi din mine însumi!<br><br>
       <strong>Cu drag,</strong><br>
       <strong>Partenerul tău!</strong>
     </p>
