--- a/memory.html
+++ b/memory.html
@@ -10,7 +10,7 @@
 <body>
 
   <header class="site-header">
-    <h1>Memory — 5×5</h1>
+    <h1>COMPLETEAZA PENTRU O SURPRIZA!!!</h1>
     <p class="rotate-hint">🔄 Rotate for best experience</p>
   </header>
 
@@ -182,13 +182,13 @@
     <!-- Surprise button (hidden until game end) -->
     <div class="end-controls">
       <button id="surprise-btn" class="surprise-btn" type="button" aria-hidden="true">
-        See the Surprise
+        URMATORUL PAS....
       </button>
     </div>
   </main>
 
   <footer class="site-footer">
-    <small>Tap a card to reveal. Match pairs to remove them.</small>
+    <small>Apasa un card pentru a vedea numarul ascuns, gaseste perechea pentru a le face sa dispara si a finaliza jocul.</small>
   </footer>
 
 </body>
