--- a/surpriza.html
+++ b/surpriza.html
@@ -18,14 +18,18 @@
 
   <!-- Bonnet/banner at the top -->
   <div class="bonnet">
-    Bine ai venit la scrisoarea mea!❤️
+    SCRISOAREEEE!!!❤️
   </div>
 
   <!-- Centered main rectangle for content -->
   <div class="center-rectangle">
     <p>
       Din cauza faptului ca eu scriu urat am decis sa iti fac o scrisoare de asta:D<br>
-      Vreau sa stii cat de mult te iubesc si nu voi scrie nimic cu ai totul vine de la mine!
+      Vreau sa stii cat de mult te iubesc si nu voi scrie nimic cu <strong>AI</strong> totul vine de la mine!<br>
+      <br> Dragă Îngeraș,&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+      <br>Încep aceasta scrisoare cu dorința de a iti transmite cel mai cald și sincer <strong>LA MULȚI ANI</strong>! <br>Te iuhesc enorm, indiferent de cîte certuri avem, știu ca mereu ne vom âmpăca si totul va fi frumos...<br> 
+      Stiu ca ai zis ca nu te intereseaza nimic despre cadoul meu pentru tine, dar sunt si voi ramane fanul tau numarul <strong>#1</strong> indiferent
+      <br> 
     </p>
   </div>
 
