--- a/surpriza.html
+++ b/surpriza.html
@@ -29,7 +29,8 @@
       <br> Dragă Îngeraș,&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
       <br>Încep aceasta scrisoare cu dorința de a iti transmite cel mai cald și sincer <strong>LA MULȚI ANI</strong>! <br>Te iuhesc enorm, indiferent de cîte certuri avem, știu ca mereu ne vom âmpăca si totul va fi frumos...<br> 
       Stiu ca ai zis ca nu te intereseaza nimic despre cadoul meu pentru tine, dar sunt si voi ramane fanul tau numarul <strong>#1</strong> indiferent
-      <br> 
+      <br> Înțeleg complet ca uneori ești obosită și iti e greu sa gandesti rational sau idk să exprimi empatie, dar in unele momente chiar am nevoie de empatie și ințelegere mai mult decât de adevar. 
+      Stiu adevarul și știu ca nu ai vrea sa imi arat vulnerabilitățile public; te inteleg complet dar am vrut să-mi exprim recunoștiința față de oamenii care mi-au fost alaturi si tu ești inclusă in aceasta lista. 
     </p>
   </div>
 
