--- a/surpriza.html
+++ b/surpriza.html
@@ -30,7 +30,12 @@
       <br>Încep aceasta scrisoare cu dorința de a iti transmite cel mai cald și sincer <strong>LA MULȚI ANI</strong>! <br>Te iuhesc enorm, indiferent de cîte certuri avem, știu ca mereu ne vom âmpăca si totul va fi frumos...<br> 
       Stiu ca ai zis ca nu te intereseaza nimic despre cadoul meu pentru tine, dar sunt si voi ramane fanul tau numarul <strong>#1</strong> indiferent
       <br> Înțeleg complet ca uneori ești obosită și iti e greu sa gandesti rational sau idk să exprimi empatie, dar in unele momente chiar am nevoie de empatie și ințelegere mai mult decât de adevar. 
-      Stiu adevarul și știu ca nu ai vrea sa imi arat vulnerabilitățile public; te inteleg complet dar am vrut să-mi exprim recunoștiința față de oamenii care mi-au fost alaturi si tu ești inclusă in aceasta lista. 
+      Stiu adevarul și știu ca nu ai vrea sa imi arat vulnerabilitățile public; te inteleg complet dar am vrut să-mi exprim recunoștiința față de oamenii care mi-au fost alaturi si tu ești inclusă in aceasta lista.
+      <br> Și mereu imi spui ca eu sunt ipocrit, poate sunt și nu vreau sa zic ca nu aș fi, dar tu nu accepti același tratament care mi-l aplici mie spre exemplu să zic că aș incepe eu sa vorbesc despre adevarul din viața ta, stiu ca nu ti-ar placea deloc. ACUM ASTA NU INSEAMNA CA ESTI CEA MAI REA IUBITA DIN LUME SI NU VREAU SA ITI STRIC ZIUA DE NASTERE CU ASTA!!!
+      <br> Eu te iubesc și vreau să simt puțina empatie din partea iubitei mele. TU ESTI MAI IMPORTANTA DECAT PRIETENII MEI. Și chestia asta nu se va schimba vreodată.<br>
+      Te rog să mă ierți pentru tot ce ți-am greșit, nu sunt perfect si nu voi fi vreodată, dar imi doresc ca in viitor poate ca vei fi mai intelegatoare si mai empatica in momentele grele chiar si cand esti obosită, nu te poti astepta de la mine sa am cuvintele la mine cand nu sunt in apele mele.
+      Eu lucrez la chestia asta si chiar ma chinui sa fiu mai empatic cu tine si cand sunt oboosit, dar cand tu consideri ca nu ar fi trebuit sa fac ceva te aprinzi si ori ma certi ori imi vorbesti despre adevar; nu asta vreau de la tine. Cum nici tu nu ai vrea să iti vorbesc despre ce cred eu ca e adevarul in viata ta cand te simti aiurea, nici eu nu vreau.
+      <br>
     </p>
   </div>
 
