--- a/surpriza.html
+++ b/surpriza.html
@@ -5,7 +5,7 @@
   <title>Scrisorica hihihi</title>
   <link rel="stylesheet" href="css/lotus-rain.css">
   <link rel="stylesheet" href="css/main-style.css">
-  <link rel="stylesheet" href="css/music2.css"> <!-- Add this line -->
+  <link rel="stylesheet" href="css/music2.css">
 </head>
 <body>
   <!-- Lotus rain background (flowers will fall behind everything) -->
@@ -24,17 +24,28 @@
   <!-- Centered main rectangle for content -->
   <div class="center-rectangle">
     <p>
-      Din cauza faptului ca eu scriu urat am decis sa iti fac o scrisoare de asta:D<br>
-      Vreau sa stii cat de mult te iubesc si nu voi scrie nimic cu <strong>AI</strong> totul vine de la mine!<br>
-      <br> Dragă Îngeraș,&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
-      <br>Încep aceasta scrisoare cu dorința de a iti transmite cel mai cald și sincer <strong>LA MULȚI ANI</strong>! <br>Te iuhesc enorm, indiferent de cîte certuri avem, știu ca mereu ne vom âmpăca si totul va fi frumos...<br> 
-      Stiu ca ai zis ca nu te intereseaza nimic despre cadoul meu pentru tine, dar sunt si voi ramane fanul tau numarul <strong>#1</strong> indiferent!!!!
-      <br>IARTA-MA CA NU E SCRISOARE FIZICA DAR CHIAR NU IMI AJUNGE TIMPUL:(((
-      <br> sper ca ai citit poezia de la inceput si sper ca asemenea ti-au placut jocurile la care am lucrat foarte mult si care le vei putea vizita oricand!! 
-      Nu am prea multe de zis pentru ca deja stii tot despre mine, uf, sa ai 18 ani e cel mai ciudat lucru pentru că totul se schimba dar ramane la fel in același timp... like poti face chestii care drept minor
-      nuh uh dar in acelasi timp nu mai poti face chestii care le puteai face ca minor (sunt mai multe avantaje la un major). Cel mai mult ma sperie gandul ca am crescut, nu mai sunt un copil si cat de mult as vrea sa traiesc ca un copil, devine tot mai greu. 
-      Iți multumesc enorm că imi esti alaturi mereu si nu m-ai lasat balta cand au fost si vrenurile mai grele, precum la inceput sau dupa certuri mai urate:(
-      <br>Nu ti-am zis niciodata, dar faptul ca imi permiti sa fiu copil in preajma ta conteaza foarte mult pentru mine si eu te iubesc enorm <3
+      Din cauza faptului că eu scriu urât am decis să-ți fac o scrisoare de asta :D
+      Vreau să știi cât de mult te iubesc și nu voi scrie nimic cu <strong>AI</strong> – totul vine de la mine!
+    </p>
+    <p>
+      <strong>Dragă Îngeraș,</strong>
+    </p>
+    <p>
+      Încep această scrisoare cu dorința de a-ți transmite cel mai cald și sincer <strong>LA MULȚI ANI!</strong>
+      Te iubesc enorm, indiferent de câte certuri avem, știu că mereu ne vom împăca și totul va fi frumos...
+      Știu că ai zis că nu te interesează nimic despre cadoul meu pentru tine, dar sunt și voi rămâne fanul tău numărul <strong>#1</strong> indiferent!
+    </p>
+    <p>
+      Iartă-mă că nu e scrisoare fizică, dar chiar nu-mi ajunge timpul :(
+      Sper că ai citit poezia de la început și sper că ți-au plăcut jocurile la care am lucrat foarte mult și pe care le vei putea vizita oricând!
+    </p>
+    <p>
+      Nu am prea multe de zis pentru că deja știi tot despre mine. Uf, să ai 18 ani e cel mai ciudat lucru pentru că totul se schimbă dar rămâne la fel în același timp... Poți face chestii care drept minor nuh uh, dar în același timp nu mai poți face chestii pe care le puteai face ca minor (sunt mai multe avantaje la un major).
+      Cel mai mult mă sperie gândul că am crescut, nu mai sunt un copil și cât de mult aș vrea să trăiesc ca un copil, devine tot mai greu.
+    </p>
+    <p>
+      Îți mulțumesc enorm că îmi ești alături mereu și nu m-ai lăsat baltă când au fost și vremuri mai grele, precum la început sau după certuri mai urâte.
+      Nu ți-am zis niciodată, dar faptul că îmi permiți să fiu copil în preajma ta contează foarte mult pentru mine și eu te iubesc enorm! &lt;3
     </p>
   </div>
 
