--- a/surpriza.html
+++ b/surpriza.html
@@ -27,9 +27,7 @@
       Din cauza faptului că eu scriu urât am decis să-ți fac o scrisoare de asta :D
       Vreau să știi cât de mult te iubesc și nu voi scrie nimic cu <strong>AI</strong> – totul vine de la mine!
     </p>
-    <p>
-      <strong>Dragă Îngeraș,</strong>
-    </p>
+      <p class="dear-left"><strong>Dragă Îngeraș,</strong></p>
     <p>
       Încep această scrisoare cu dorința de a-ți transmite cel mai cald și sincer <strong>LA MULȚI ANI!</strong>
       Te iubesc enorm, indiferent de câte certuri avem, știu că mereu ne vom împăca și totul va fi frumos...
