--- a/surpriza.html
+++ b/surpriza.html
@@ -25,7 +25,7 @@
   <div class="center-rectangle">
     <p>
       Din cauza faptului că eu scriu urât am decis să-ți fac o scrisoare de asta :D
-      Vreau să știi cât de mult te iubesc și nu voi scrie nimic cu <strong>AI</strong> – totul vine de la mine!
+      Vreau să știi cât de mult te iubesc și nu voi scrie nimic cu <strong>AI</strong> SI TOTUL VINE DE LA MINE!
     </p>
       <p class="dear-left"><strong>Dragă Îngeraș,&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong></p>
     <p>
