--- a/surpriza.html
+++ b/surpriza.html
@@ -45,6 +45,18 @@
       Îți mulțumesc enorm că îmi ești alături mereu și nu m-ai lăsat baltă când au fost și vremuri mai grele, precum la început sau după certuri mai urâte.
       Nu ți-am zis niciodată, dar faptul că îmi permiți să fiu copil în preajma ta contează foarte mult pentru mine și eu te iubesc enorm! &lt;3
     </p>
+    <p>
+      ȘI FACI 17 ANȘORI AHHH CE REPEDE A TRECUT VREMEA...pe 26 facem  7 luni...vom avea 205 de zile impreună!!!
+      SPER CA ITI PLACE COVRIGELUL PENTRU CA STIU CA LUMANAREA O IUBESTI!! Voi avea grija si de Milly....
+      Sper ca te-am surprins cu blush-ul si chiar daca tu ai crezut ca e concealer sau ruj roșu 🙄
+    </p>
+    <p>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cu drag,
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;IUBITUL TAU!
+
+      TE IUBESC ENORM
+      DACA AI AJUNS AICI EMOJI CU 🪷
+    </p>
   </div>
 
   <!-- Lotus background effect -->
