--- a/text.html
+++ b/text.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/text.css">
   <!-- Preload the turn image for instant display -->
-  <link rel="preload" as="image" href="img/turn.gif">
+  <link rel="preload" as="image" href="img/turn.png">
 </head>
 <body>
   <div id="splash" class="splash" role="dialog" aria-modal="true">
