--- a/text.html
+++ b/text.html
@@ -5,18 +5,15 @@
   <title>Splash Sequence</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/text.css">
-  <!-- Preload the turn image for instant display -->
-  <link rel="preload" as="image" href="img/turn.png">
+  <link rel="preload" as="image" href="img/turn.jpg">
 </head>
 <body>
   <div id="splash" class="splash" role="dialog" aria-modal="true">
     <div class="splash-content">
       <div class="message" aria-live="polite"></div>
       <img id="turnImage" src="img/turn.jpg" alt="Turn phone illustration">
-      <!-- Optional: you can reuse .message for 'Tap to continue' -->
     </div>
   </div>
-  <!-- Main page content goes here, hidden by splash until completed -->
   <script src="js/text.js"></script>
 </body>
 </html>
