--- a/text.html
+++ b/text.html
@@ -5,7 +5,7 @@
   <title>Splash Sequence</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/text.css">
-  <link rel="preload" as="image" href="img/turn.jpg">
+  <link rel="preload" as="image" href="img/turn.png">
 </head>
 <body>
   <div id="splash" class="splash" role="dialog" aria-modal="true">
