--- a/text.html
+++ b/text.html
@@ -11,7 +11,7 @@
   <div id="splash" class="splash" role="dialog" aria-modal="true">
     <div class="splash-content">
       <div class="message" aria-live="polite"></div>
-      <img id="turnImage" src="img/turn.jpg" alt="Turn phone illustration">
+      <img id="turnImage" src="img/lotus.jpg" alt="Turn phone illustration">
     </div>
   </div>
   <script src="js/text.js"></script>
