--- a/text.html
+++ b/text.html
@@ -5,13 +5,13 @@
   <title>Splash Sequence</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/text.css">
-  <link rel="preload" as="image" href="img/turn.png">
+  <link rel="preload" as="image" href="img/turn.gif">
 </head>
 <body>
   <div id="splash" class="splash" role="dialog" aria-modal="true">
     <div class="splash-content">
       <div class="message" aria-live="polite"></div>
-      <img id="turnImage" src="img/lotus.jpg" alt="Turn phone illustration">
+      <img id="turnImage" src="img/turn.gif" alt="Turn phone illustration">
     </div>
   </div>
   <script src="js/text.js"></script>
