--- a/craciun/craciun.html
+++ b/craciun/craciun.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <div class="scene">
-        <!-- Falling snowflakes container -->
+        <!-- Falling snowflakes -->
         <div id="falling-elements"></div>
-        <!-- Santa animation; initially hidden/off-screen -->
+        <!-- Santa with sleigh animation -->
         <div id="santa-container" class="hide">
             <img id="santa-img" src="../img/santa.png" alt="Santa with Sleigh" />
         </div>
+        <!-- Emoji explosion effect (centered) -->
+        <div id="emoji-explosion"></div>
         <!-- Rotating festive messages -->
         <div id="festive-message" class="hide"></div>
-        <audio id="hoho-audio" src="../music/hoho.mp3" preload="auto"></audio>
     </div>
     <script src="js/craciun.js"></script>
     <script src="js/scene-sequence.js"></script>
