--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ Te-aş zidi din mine însumi!<br><br>
       <strong>Partenerul tău!</strong>
     </p>
     <center><a class="continue-link" href="scrabble.html">Ai citit tot?</a></center>
-    <center><a class="continue-link" href="craciun/craciun.html">craciun</a></center>
+    <center><a class="continue-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">site craciun</a></center>
   </div>
 
   <script>
